dobot/dobot_ws/log/build_2023-08-04_15-19-52/yolo_pkg/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/ksh/yolo_ws/install/yolo_pkg/lib/python3.10/site-packages/yolo_pkg/object_detection_sub.py", line 56
    def main(args=None)
                       ^
SyntaxError: expected ':'

